Fix overflow on math browser inconsistency

--- a/static/style.css
+++ b/static/style.css
@@ -30,8 +30,9 @@ html {
   height: 100%;
   font-size: 18px;
   font-family: Palatino Linotype, Palatino LT STD, bitstream charter, charter,
-    Georgia, serif;
+    serif;
   margin-inline: auto;
+  scrollbar-gutter: stable both-edges;
 }
 
 /* GRID LAYOUT */
@@ -49,6 +50,7 @@ html {
       "footer" !important;
   }
 } */
+
 body {
   background-color: var(--background-color);
   color: var(--text-color);
@@ -226,20 +228,6 @@ main {
   background-color: var(--background-primary-color);
   padding-block: 2.5em;
   padding-inline: 4em;
-}
-
-mjx-container {
-  overflow-x: scroll;
-  width: 100%;
-  height: 100%;
-  min-height: 100%;
-  box-sizing: content-box;
-}
-
-div:has(mjx-container) {
-  box-sizing: content-box;
-  width: 100%;
-  /* height: 100%; */
 }
 
 hr {
@@ -461,3 +449,31 @@ a.incognito {
   border: 1px solid var(--border-secondary-color);
   margin-bottom: 1em;
 }
+
+/* MATH STYLING */
+/* TODO when MathJax 4 comes out: upgrade */
+
+mjx-container[display] {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+/* FIX FOR EXPONENTS BEING CUT OFF */
+/* don't ask me why. I don't know */
+mjx-container[display] {
+  margin-block: 0 !important;
+  padding-top: 2px;
+}
+
+div:has(> mjx-container[display]) {
+  margin-block: 1em;
+}
+/* END FIX */
+
+mjx-assistive-mml {
+  max-width: 100%;
+  right: 0;
+  bottom: 0;
+}
+
+/* END MATH STYLING */
